[gd_scene load_steps=6 format=3 uid="uid://b2knwu28hl12b"]

[ext_resource type="Script" uid="uid://bp4dpwx14ihku" path="res://BrainVisualizer/UI/Windows/CloneCorticalArea/WindowCloneCorticalArea.gd" id="2_8fxof"]
[ext_resource type="Script" uid="uid://dg0vj5dqxb606" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/TextInput.gd" id="5_6v723"]
[ext_resource type="PackedScene" uid="uid://brwx50pyfywb7" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector2iSpinBoxField.tscn" id="6_sl08t"]
[ext_resource type="PackedScene" uid="uid://ci8uvawjvxfax" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector3iSpinBoxField.tscn" id="6_t2gp1"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="10_smykg"]

[node name="WindowCloneCorticalArea" type="VBoxContainer"]
offset_right = 126.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("2_8fxof")
window_spawn_location = Vector2i(900, 400)

[node name="TitleBar" parent="." instance=ExtResource("10_smykg")]
layout_mode = 2
title = "Clone Cortical Area"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2

[node name="gap1" type="Control" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cortical Name"

[node name="Cortical_Name" type="LineEdit" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Friendly Name"
max_length = 16
script = ExtResource("5_6v723")

[node name="gap2" type="Control" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "3D Coordinates"

[node name="Coordinates_3D" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer2" instance=ExtResource("6_t2gp1")]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "2D Coordinates"

[node name="Coordinates_2D" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer3" instance=ExtResource("6_sl08t")]
layout_mode = 2

[node name="gap" type="Control" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="Clone_button" type="Button" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Clone Cortical Area"

[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/Clone_button" to="." method="_clone_pressed"]
